2000-03-01  Mark Crichton  <crichton@gimp.org>

	* configure.in: Added BUILD_CANVAS_ITEM stuff to (finally)
	fix the last auto* build bug (where we have libart, but no
	gnome-libs)

	* gdk-pixbuf/Makefile.am: Same

2000-02-28  Matt Wilson  <msw@redhat.com>

	* gdk-pixbuf/gdk-pixbuf-drawable.c: s/unsigned long/guint32/g,
	s/unsigned short/guint16/g, s/unsigned char/guint8/g

2000-02-26  Federico Mena Quintero  <federico@helixcode.com>

	* README: We don't require libgif/ungif nor libXpm.

	* NEWS: This was outdated, so updated it.

2000-02-25  Federico Mena Quintero  <federico@helixcode.com>

	* gdk-pixbuf.m4: Use the correct name for
	gdk-pixbuf/gdk-pixbuf.h.  Thanks to Jacob Berkman for pointing
	this out.

2000-02-21  Federico Mena Quintero  <federico@helixcode.com>

	* configure.in (GDK_PIXBUF_MINOR): Bumped version number to 0.6.0.

	* doc/compiling.sgml: New appendix documenting the gdk-pixbuf
	library's particular options to configure.in.

	* doc/gdk-pixbuf.sgml: Include compiling.sgml appendix via an
	entity.

	* doc/Makefile.am (gdk-pixbuf.html): Added compiling.sgml.

	* gdk-pixbuf/io-ico.c (gdk_pixbuf__ico_image_load_increment):
	Fixed typo in prototype name.

	* configure.in: Changed duplicated AC_MSG_CHECKING message to
	something more meaningful; now it is "checking whether dynamic
	modules work".

	* gdk-pixbuf/pixops/Makefile.am (noinst_PROGRAMS): Do not install
	the timescale program.

	Integrated Miguel de Icaza's <miguel@gnu.org> patch for optionally
	creating a single static library with all the image format modules
	in it.

2000-02-20  Miguel de Icaza  <miguel@gnu.org>

	* gdk-pixbuf/io-xpm.c (gdk_pixbuf__xpm_image_load): Add prefix.
	(gdk_pixbuf__xpm_image_load_xpm_data): Add prefix.

	* gdk-pixbuf/io-tiff.c (gdk_pixbuf__tiff_image_load_real): Add prefix.
	(gdk_pixbuf__tiff_image_stop_load): Add prefix.
	(gdk_pixbuf__tiff_image_load_increment): Add prefix.
	(gdk_pixbuf__tiff_image_load): Add prefix.