@@ -1,12 +1,14 @@
 SUBDIRS = pixops
 
-if BUILD_CANVAS_ITEM
+if (!BUILD_CANVAS_ITEM)
 CANVAS_PIXBUF_LIB =
 CANVAS_PIXBUF_HEADERFILES =
 EXTRA_GNOME_LIBS =
 else
 CANVAS_PIXBUF_LIB = libgnomecanvaspixbuf.la
 CANVAS_PIXBUF_HEADERFILES=gnome-canvas-pixbuf.h
+libgnomecanvaspixbuf_la_SOURCES = gnome-canvas-pixbuf.c
+libgnomecanvaspixbuf_la_LDFLAGS = $(EXTRA_GNOME_LIBS)
 EXTRA_GNOME_LIBS = $(GNOME_LIBS)
 endif
 
@@ -14,8 +16,6 @@ lib_LTLIBRARIES = 		\
 	libgdk_pixbuf.la	\
 	$(CANVAS_PIXBUF_LIB)
 
-libgnomecanvaspixbuf_la_SOURCES = gnome-canvas-pixbuf.c
-libgnomecanvaspixbuf_la_LDFLAGS = $(EXTRA_GNOME_LIBS)
 
 libexecdir = $(libdir)/gdk-pixbuf/loaders
 
